Fixed Spacing Issues and Retina Display

--- a/docs/NewPortfolio.css
+++ b/docs/NewPortfolio.css
@@ -3,13 +3,14 @@
     padding: 0;
     box-sizing: content-box;
   }
-
+/* LARGE SCREENS */
 /* PORTFOLIO GRID, TEXT, AND LINK */
   .grid-container{
     display: grid;
     grid-template-columns: auto auto auto;
-    padding: 1rem;
+    padding: 1rem 3rem;
     gap: 1rem;
+    justify-content: space-evenly;
   }
 
   .grid-item {
@@ -47,6 +48,7 @@
   }
   
   .grid-container a{
+    background-color: rgb(255, 255, 255);
     display: flex;
     flex-wrap: wrap;
     width: 100%;
@@ -83,6 +85,11 @@
     object-fit: cover;
     position: relative;
     z-index: 1;
+    
+  }
+
+  .grid-container div a:hover img{
+    opacity: .5;
   }
 
 /*  #banzai{
@@ -93,3 +100,67 @@
 */
 
 /* SECTION END */
+
+@media only screen and (min--moz-device-pixel-ratio: 2),
+only screen and (-o-min-device-pixel-ratio: 2/1),
+only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (min-device-pixel-ratio: 2){
+  nav{
+    width:100%;
+    position: absolute;
+  }
+  
+
+  .icon{
+    display:block;
+  }
+
+  .horizontal {
+    display:none;
+    padding:0;
+    
+  }
+
+
+  .horizontal.vertical{
+    position: absolute;
+    right:0;
+    top:3.75rem;
+    display:flex;
+    flex-direction: column;
+
+    z-index: 2;
+  }
+
+  .horizontal.vertical a{
+    border: 2px;
+    border-style: ridge;
+    padding: 1.5rem 1rem;
+    margin: 0 auto;
+  }
+
+  .active{
+    float: none;
+    text-decoration: none;
+    display:block;
+    margin: 0rem .5rem .5rem .5rem;
+  }
+
+/* PORTFOLIO LINKS */
+  .grid-container{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    
+    padding-top: 4rem;
+    margin: 0 auto;
+    gap: 1rem;
+    justify-content: space-evenly;
+  }
+
+  .grid-container div{
+    width: 20rem;
+    height: 15rem;
+  }
+
+
+}
