--- a/docs/nav.css
+++ b/docs/nav.css
@@ -9,7 +9,7 @@
 /* Makes the header stick to the top of the page */
 nav{
     width:100%;
-
+    z-index: 20;
   }
 
   /* Nav Link Styling */
@@ -159,6 +159,56 @@ footer a:active{
 
 /* SECTION ENDS */
 
+@media only screen and (min--moz-device-pixel-ratio: 2),
+only screen and (-o-min-device-pixel-ratio: 2/1),
+only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (min-device-pixel-ratio: 2){
+  nav{
+    width:100%;
+    position: absolute;
+  }
+  
+
+  .icon{
+    display:block;
+  }
+
+  .horizontal {
+    display:none;
+    padding:0;
+    
+  }
+
+
+  .horizontal.vertical{
+    position: absolute;
+    right:0;
+    top:3.75rem;
+    display:flex;
+    flex-direction: column;
+
+    z-index: 2;
+  }
+
+  .horizontal.vertical a{
+    border: 2px;
+    border-style: ridge;
+    padding: 1.5rem 1rem;
+    margin: 0 auto;
+  }
+
+  .active{
+    float: none;
+    text-decoration: none;
+    display:block;
+    margin: 0rem .5rem .5rem .5rem;
+  }
+
+  
+
+
+}
+
 
   /* --- Phone Screen Size --- */
 @media screen and (max-width:37.5rem) {
@@ -205,6 +255,8 @@ footer a:active{
 
 
 }
+
+
 
     /* Tablet Screen Size */
 @media screen and (min-width:37.5rem){
